# CustomDownloader

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml  tasks.py
.devcontainer/: devcontainer.json
.github/workflows/: python-ci.yml
src/downloader/: __init__.py  __main__.py  application.py  views.py
test/: test_download_backend.py  test_enviroment.py  test_views.py
tools/: clean  config.sh  uic
ui/: MainWindow.ui
